# hello_toolchains_llvm

./: .gitignore  MODULE.bazel  compile_commands.json
main/: BUILD
toolchain/: BUILD  cc_toolchain_config.bzl
